fix: org.apache.logging.log4j.util.Strings usages are replaced with org.apache.commons.lang3.StringUtils. Some deprecated API usages are removed.